Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-115308

Fix DirectX texture propagation from FFMPEG to RHI

XMLWordPrintable

    • Windows
    • 3363496a7 (dev), a3bf450b2 (6.7), 4043d7ebc (6.6), 582bf926b (tqtc/lts-6.5), 10ba74ebc (dev), a25b5eafc (6.7), fd893ee8d (6.6), ca9a5fb53 (tqtc/lts-6.5), 1e3e0fac0 (dev), c6880ff17 (6.7), b6138a0f4 (6.6), bee1f5510 (tqtc/lts-6.5), d9a38a71b (dev)
    • Multimedia wk 15-16

      Enabling FFMPEG HW texture conversion with media player on Windows causes stuttering playback as demonstrated in QTBUG-113832, QTBUG-111543, QTBUG-111911, QTBUG-111459, and QTBUG-109213.

      HW texture conversion was therefore disabled for the Windows platform in Fix stuttering video playback and AMD GPU crash on Windows (I12807994) · Gerrit Code Review (qt-project.org)

      To reduce the CPU and GPU load during video playback we should still investigate how we can re-enable HW texture conversion during video playback.

      We have discovered that during video playback with DirectX 11 backend, FFMPEG allocates a frame pool using a fixed size texture array to enable multi-threaded decoding. Unfortunately we have not found a good mechanism to synchronize reading frames from this pool. This means that frames may get overwritten before they are being displayed. 

      The task is to understand how we can prevent overwriting frames in the FFMPEG frame pool before they are displayed, and implement a fix for this. Once this works, we can revert the change in Fix stuttering video playback and AMD GPU crash on Windows (I12807994) · Gerrit Code Review (qt-project.org)

       

        1. memory.png
          249 kB
          Elias Steurer
        2. Horde 1980.zip
          7.27 MB
          Elias Steurer
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            johanseg Jøger Hansegård
            johanseg Jøger Hansegård
            Votes:
            3 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes