Re-enable HW texture conversion on Windows with FFmpeg backend

To reduce CPU load and improve media playback performance, we can keep
decoded video frames on the GPU all the way from decoding with FFmpeg
until the frame is displayed on screen.

This feature has previoulsy been disabled by default on Windows, because
we were facing issues with bumpy video playback when hw texture
conversion was enabled. Commit 3363496a7f0a0690bc3a2e50172cf6563f198701
fixes this issue, and we can re-enable the feature.

This patch re-enables hw texture conversion by default with FFmpeg
backend.

Before staging, this patch must be tested on an AMD GPU, where we
previously experienced crashes due to texture sharing.

Fixes: QTBUG-115308
Pick-to: 6.7 6.6 6.5
Change-Id: I8d95bebd2566492aa73fed6e2029b56018755396
Reviewed-by: Pavel Dubsky <pavel.dubsky@qt.io>
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>