src/plugins/multimedia/ffmpeg/qffmpeghwaccel.cpp
@@ -228,36 +228,20 @@ static bool isNoConversionFormat(AVPixelFormat f)
 
 namespace {
 
-bool hwTextureConversionEnabled(AVPixelFormat fmt)
+bool hwTextureConversionEnabled()
 {
 
     // HW textures conversions are not stable in specific cases, dependent on the hardware and OS.
     // We need the env var for testing with no textures conversion on the user's side.
-    static bool isDisableConversionSet = false;
-    static const int disableHwConversion = qEnvironmentVariableIntValue(
-            "QT_DISABLE_HW_TEXTURES_CONVERSION", &isDisableConversionSet);
+    static const int disableHwConversion =
+            qEnvironmentVariableIntValue("QT_DISABLE_HW_TEXTURES_CONVERSION");
 
-    if (disableHwConversion)
-        return false;
-
-#if QT_CONFIG(wmf)
-    if (fmt == AV_PIX_FMT_D3D11) {
-        // On Windows, HW texture conversion currently causes stuttering video display and possibly
-        // crash on AMD GPUs. See for example QTBUG-113832 and QTBUG-111543. On this platform, HW
-        // texture conversions have to be explicitly enabled for debugging and testing.
-        if (!isDisableConversionSet)
-            return false;
-    }
-#else
-    Q_UNUSED(fmt);
-#endif
-
-    return true;
+    return !disableHwConversion;
 }
 
 void setupDecoder(const AVPixelFormat format, AVCodecContext *const codecContext)
 {
-    if (!hwTextureConversionEnabled(format))
+    if (!hwTextureConversionEnabled())
         return;
 
 #if QT_CONFIG(wmf)
@@ -268,6 +252,7 @@ void setupDecoder(const AVPixelFormat format, AVCodecContext *const codecContext
         QFFmpeg::MediaCodecTextureConverter::setupDecoderSurface(codecContext);
 #else
     Q_UNUSED(codecContext);
+    Q_UNUSED(format);
 #endif
 }
 
@@ -465,7 +450,7 @@ void TextureConverter::updateBackend(AVPixelFormat fmt)
     if (!d->rhi)
         return;
 
-    if (!hwTextureConversionEnabled(fmt))
+    if (!hwTextureConversionEnabled())
         return;
 
     switch (fmt) {
